Java/Leitor e Gerador de TxT/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste
-d
C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Teste
-windowtitle
Teste
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://download.oracle.com/javase/8/docs/api/
C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste/Leitor.java
C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste/thiago.java
C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste/Gerador.java
<---- end of javadoc command ---->
Loading source file C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste\Leitor.java...
Loading source file C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste\thiago.java...
Loading source file C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste\Gerador.java...
C:\Users\Thiago Romão\Documents\Projetos-Romao\Brincando com Codigos\Teste\Gerador.java:10: error: ';' expected
        Scanner ler new Scanner (System.in);
                   ^
1 error
